--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,6 @@
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".activity.RestaurantListAcitivity"
@@ -43,7 +38,6 @@
             android:label="@string/title_activity_payment"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name=".activity.View_Pay_BillActivity"
             android:screenOrientation="sensorPortrait"
@@ -81,9 +75,8 @@
         <activity
             android:name=".activity.PlaceOrderActivity"
             android:screenOrientation="sensorPortrait"
-            android:windowSoftInputMode="adjustNothing"
-            android:theme="@style/AppTheme.NoActionBar" />
-
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustNothing" />
 
         <service android:name=".authenticator.AuthenticatorService">
             <intent-filter>
@@ -114,6 +107,15 @@
                 android:resource="@xml/syncadapter" />
         </service>
 
+        <activity android:name=".activity.NoNetworkActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            </activity>
     </application>
 
 </manifest>
